*lib/checkban.php --> uniqueid typo, also some isset() again for uninitalized stuff
*lib/commentary --> added the section to the commentline-hook
*lib/extended-battle.php --> another unset nightmare, also a typo
*lib/output.php --> bug, output for debug did not show anymore, typo in binary comparison
*lib/pageparts.php --> added "Manage Modules" shortlink to top right corner (petitiondisplay)
*lib/showform.php --> unset nightmare

[CHANGES]

Changes to 1.2.10 +nb
In general, this release to 1.3.0 does incorporate the switch from PHP7 to PHP8.
THINGS MIGHT BREAK if you use this release in PHP7
[FIXES]
[CHANGES]

Changes to 1.2.9 +nb
[FIXES]
*motd.php --> month is now a valid DATETIME, so set to 31 as last day returns an error
*lib/clan/clan_default.php -> GROUP BY condition again (see mysql 8 issues) does not accept an order anymore (rightfully)
*lib/tabledescriptor.php -> Default values that were number 0 (equals empty string) or empty strings were not synctable()'d into the database
[CHANGES]
*lib/commentary.php --> GMs can now delete their own comments
*lib/data/configuration.php --> added settings for SMTP sending
*lib/expire_chars.php --> added access to sendmail() instead of the old mail() function which doesn't work well enough
*lib/sendmail.php --> added SMTP support to send out
*home.php --> new hook for bottom display "index_bottom"
*modules.php --> modules can now have categories for headlines in navigations. Catgory "Easter|Egg" will set a headline "Easter" and then list "Egg" in module manager view

Changes to 1.2.8 +nb
[FIXES]
*forest.php -> $packofmonsters set to false by default
*lib/dbwrapper.php -> was missing somewhere.. my bad
*lib/errorhandling.php -> fixes stuff that brakes in php 7.x, no magic quotes anymore!
*lib/modules.php -> "function" is now a reserved keyword, which suckes in the module_hooks table... as it is a row there.
*lib/pageparts.php -> petitions are now able to be hooked into and resorted (page display), allows now resorting