@@ -12,6 +12,7 @@ Changes to 1.3.0 +nb
 *lib/extended-battle.php --> another unset nightmare, also a typo
 *lib/output.php --> bug, output for debug did not show anymore, typo in binary comparison
 *lib/pageparts.php --> added "Manage Modules" shortlink to top right corner (petitiondisplay)
+*lib/sendmail.php --> sending to a non-valid email address format should not be allowed -> skipped (no good error handling optional, because it is not a system error)
 *lib/showform.php --> unset nightmare
 
 [CHANGES]
